--- a/style/style.css
+++ b/style/style.css
@@ -104,7 +104,7 @@ main .container ul li label {
 .checkbox:checked + .fake::before {
     opacity: 1;
 }
-/*перекреслення не працює*/
+/*перекреслення не працює.*/
 .checkbox:checked + .text {
     text-decoration: line-through;
     text-decoration-color: #9b96ac;
