--- a/style/style.css
+++ b/style/style.css
@@ -2,83 +2,85 @@
     transition: all .1s ease-in;
     box-sizing: border-box;
 }
-body {
-    max-width: 793px;
-    max-height: 507px;
-}
-header .container {
+
+.header .container {
+    position: relative;
     max-width: 793px;
     height: 82px;
     background-color: #4A4F56;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
-header .container h2 {
-    text-align: center;
-    position: absolute;
-    margin: 19px 0 35px;
+.header .container h2 {
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
     font-weight: 700;
     color: #FF8984;
+    margin-bottom: 4px;
 }
-header .container p {
-    position: absolute;
-    margin: 51px 0 12px;
+.header .container p {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
     color: #FF8984;
 }
 main .container {
-    position: relative;
     max-width: 793px;
-    max-height: 425px;
+    height: 425px;
     background-color: #3B3F45;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 20px;
 }
-main .container ul {
-    max-width: 100%;
-    margin-top: 20px;
+.shoping-list {
+    width: 534px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 57px;
 }
-main .container ul li {
-    width: 534px;
+.shoping-list li {
+    width: 100%;
     height: 45px;
     display: flex;
-
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 12px;
 }
-main .container ul li:hover {
+.shoping-list li:hover {
     background-color: #625E77;
     border-top: 3px solid #fff;
     border-bottom: 3px solid #fff;
 }
-main .container ul li:active {
+.shoping-list li:active {
     background-color: #FF8984;
 }
-main .container ul .first-li {
+.shoping-list .first-li {
     background-color: #88839E;
 }
-main .container ul .second-li {
+.shoping-list .second-li {
     background-color: #7A7593;
 }
-main .container ul li label {
+.label {
     display: flex;
+    align-items: center;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 400;
     color: #fff;
-    align-items: center;
 }
 .text {
+    display: flex;
+    align-items: center;
     font-size: 18px;
 }
 .text-small {
     font-size: 11px;
+    margin-left: 4px;
 }
 /*checkbox*/
 .checkbox {
@@ -90,11 +92,10 @@ main .container ul li label {
     height: 19px;
     position: relative;
     background-color: #fff;
-    margin-left: 12px;
     margin-right: 16px;
 }
 .fake::before {
-    content: url(/img/checkbox-icon.svg);
+    content: url(../img/checkbox-icon.svg);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -104,22 +105,21 @@ main .container ul li label {
 .checkbox:checked + .fake::before {
     opacity: 1;
 }
-/*перекреслення не працює. Працє тільки якщо input не дочірній елемент, на одному рівні з label*/
+/*перекреслення не працює. Працює тільки якщо input не дочірній елемент, на одному рівні з label*/
 .checkbox:checked + .text {
     text-decoration: line-through;
     text-decoration-color: #9b96ac;
     color: #9b96ac;
 }
 .last-block {
-    margin-top: 45px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 45px;
     width: 534px;
-    margin-bottom: 45px;
     background-color: #4A4F56;
 }
 .last-block p {
-    margin-top: 12px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
